--- a/rules
+++ b/rules
@@ -7,15 +7,17 @@ override_dh_install:
 	rm debian/tmp/usr/share/doc/systemd/LICENSE
 	dh_install -O--parallel --fail-missing
 	dh_install -plibpam-systemd debian/pam-configs /usr/share
+	sed -i 's/#\(Mount\|Swap\)Auto=yes/\1Auto=no/' debian/systemd/etc/systemd/system.conf
+
 
 override_dh_auto_configure:
 	dh_auto_configure -- --with-rootdir=
 
 override_dh_auto_install:
 	dh_auto_install
-	rm debian/tmp/etc/systemd/system/runlevel5.target
-	dh_link /lib/systemd/system/multi-user.target etc/systemd/system/runlevel5.target
+	rm debian/tmp/lib/systemd/system/runlevel5.target
 	rm debian/tmp/lib/security/pam_systemd.la
+	dh_link /lib/systemd/system/multi-user.target lib/systemd/system/runlevel5.target
 
 %:
 	dh --parallel $@
