--- a/rules
+++ b/rules
@@ -11,7 +11,7 @@ override_dh_install:
 
 
 override_dh_auto_configure:
-	dh_auto_configure -- --with-rootdir=
+	dh_auto_configure -- --with-rootdir= --with-udevrulesdir=/lib/udev/rules.d
 
 override_dh_auto_install:
 	dh_auto_install
