--- a/control
+++ b/control
@@ -30,7 +30,7 @@ Section: admin
 Priority: extra
 Conflicts: sysvinit, upstart, runit-run
 Replaces: sysvinit
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, systemd
 Description: system and session manager - SysV links
  systemd is a replacement for sysvinit.  It is dependency-based and
  able to read the LSB init script headers in addition to parsing rcN.d
