--- a/rules
+++ b/rules
@@ -9,7 +9,7 @@ override_dh_install:
 	dh_install -O--parallel --fail-missing
 	dh_install -plibpam-systemd debian/pam-configs /usr/share
 	sed -i 's/#\(Mount\|Swap\)Auto=yes/\1Auto=no/' debian/systemd/etc/systemd/system.conf
-
+	find ./debian/systemd/lib -name tmpwatch.\* -delete
 
 override_dh_auto_configure:
 	dh_auto_configure -- --with-rootdir= --with-udevrulesdir=/lib/udev/rules.d
