--- a/rules
+++ b/rules
@@ -5,6 +5,7 @@
 
 override_dh_auto_configure:
 	dh_auto_configure -- --with-rootdir= --with-udevrulesdir=/lib/udev/rules.d --with-gtk
+	dh $@ --parallel --with autoreconf
 
 override_dh_install:
 	rm debian/tmp/usr/share/doc/systemd/LICENSE
