--- a/rules
+++ b/rules
@@ -5,7 +5,6 @@
 
 override_dh_auto_configure:
 	dh_auto_configure -- --with-rootdir= --with-udevrulesdir=/lib/udev/rules.d --with-gtk
-	dh $@ --parallel --with autoreconf
 
 override_dh_install:
 	rm debian/tmp/usr/share/doc/systemd/LICENSE
@@ -18,4 +17,4 @@ override_dh_install:
 	find ./debian/systemd/lib -name tmpwatch.\* -delete
 
 %:
-	dh --parallel $@
+	dh --parallel --with autoreconf $@
