--- a/control
+++ b/control
@@ -14,7 +14,7 @@ Section: admin
 Priority: extra
 Recommends: libpam-systemd
 Suggests: systemd-gui
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, util-linux (>= 2.17.2-5)
 Description: system and session manager
  systemd is a replacement for sysvinit.  It is dependency-based and
  able to read the LSB init script headers in addition to parsing rcN.d
