--- a/rules
+++ b/rules
@@ -4,7 +4,8 @@
 #export DEB_BUILD_OPTIONS="nostrip"
 
 override_dh_auto_configure:
-	dh_auto_configure -- --with-rootdir= --with-udevrulesdir=/lib/udev/rules.d --with-gtk
+	dh_auto_configure -- --with-rootdir= --with-udevrulesdir=/lib/udev/rules.d --with-gtk \
+		--disable-libcryptsetup
 
 override_dh_install:
 	rm debian/tmp/usr/share/doc/systemd/LICENSE
