--- a/rules
+++ b/rules
@@ -7,6 +7,13 @@ override_dh_auto_configure:
 	dh_auto_configure -- --with-rootdir= --with-udevrulesdir=/lib/udev/rules.d --with-gtk \
 		--disable-libcryptsetup
 
+override_dh_auto_clean:
+	dh_auto_clean
+	rm -f man/*.[1358]
+	rm -f src/systemadm.c
+	rm -f src/gnome-ask-password-agent.c
+	rm -f src/systemd-interfaces.c
+
 override_dh_install:
 	rm debian/tmp/usr/share/doc/systemd/LICENSE
 	rm debian/tmp/lib/security/pam_systemd.la
