--- a/control
+++ b/control
@@ -15,7 +15,7 @@ Priority: extra
 Recommends: libpam-systemd
 Suggests: systemd-gui
 Depends: ${shlibs:Depends}, ${misc:Depends}, util-linux (>= 2.17.2-5)
-Description: system and session manager
+Description: system and service manager
  systemd is a replacement for sysvinit.  It is dependency-based and
  able to read the LSB init script headers in addition to parsing rcN.d
  links as hints.
@@ -31,7 +31,7 @@ Priority: extra
 Conflicts: sysvinit, upstart, runit-run
 Replaces: sysvinit
 Depends: systemd (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
-Description: system and session manager - SysV links
+Description: system and service manager - SysV links
  systemd is a replacement for sysvinit.  It is dependency-based and
  able to read the LSB init script headers in addition to parsing rcN.d
  links as hints.
@@ -48,7 +48,7 @@ Architecture: linux-any
 Section: admin
 Priority: extra
 Depends: systemd (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
-Description: system and session manager - PAM module
+Description: system and service manager - PAM module
  systemd is a replacement for sysvinit.  It is dependency-based and
  able to read the LSB init script headers in addition to parsing rcN.d
  links as hints.
@@ -65,7 +65,7 @@ Architecture: linux-any
 Section: admin
 Priority: extra
 Depends: systemd (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
-Description: system and session manager - GUI
+Description: system and service manager - GUI
  systemd is a replacement for sysvinit.  It is dependency-based and
  able to read the LSB init script headers in addition to parsing rcN.d
  links as hints.
