--- a/rules
+++ b/rules
@@ -19,7 +19,8 @@ override_dh_auto_clean:
 override_dh_install:
 	rm debian/tmp/usr/share/doc/systemd/LICENSE
 	rm debian/tmp/lib/security/pam_systemd.la
-	rm debian/tmp/lib/systemd/system/shutdown.target.wants/hwclock-save.service
+	# udev already triggers hwclock during boot
+	rm debian/tmp/etc/systemd/system/sysinit.target.wants/hwclock-load.service
 	dh_install -O--parallel --fail-missing
 	dh_install -plibpam-systemd debian/pam-configs /usr/share
 
