--- a/rules
+++ b/rules
@@ -21,6 +21,7 @@ override_dh_install:
 	rm debian/tmp/lib/security/pam_systemd.la
 	# udev already triggers hwclock during boot
 	rm debian/tmp/etc/systemd/system/sysinit.target.wants/hwclock-load.service
+	rm debian/tmp/etc/systemd/system/sysinit.target.wants/systemd-vconsole-setup.service
 	dh_install -O--parallel --fail-missing
 	dh_install -plibpam-systemd debian/pam-configs /usr/share
 
