--- a/debian-fixup.service
+++ b/debian-fixup.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Various fixups to make systemd work better on Debian
 Before=var-run.mount var-lock.mount sysinit.target
-After=remount-rootfs.service
+After=systemd-remount-fs.service
 DefaultDependencies=no
 ConditionPathIsSymbolicLink=|!/etc/mtab
 ConditionPathIsSymbolicLink=|!/var/run
