Bind ifup@.service to the network device
This ensures that ifdown is run when the device is removed and the
service is stopped.  Closes: #660861, #703033

We eventually should rework that and instead of calling systemctl in
net.agent, start the service directly from the udev rule via
ENV{SYSTEMD_WANTS}.

--- a/ifup@.service
+++ b/ifup@.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=ifup for %I
 After=local-fs.target
+BindTo=sys-subsystem-net-devices-%i.device
 
 [Service]
 ExecStart=/sbin/ifup --allow=hotplug %I
