--- a/ifup@.service
+++ b/ifup@.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=ifup for %I
-After=local-fs.target networking.service
+After=local-fs.target network-pre.target networking.service
 Before=network.target
 BindsTo=sys-subsystem-net-devices-%i.device
 ConditionPathIsDirectory=/run/network
