Statically start getty on tty2-6 without logind
Add getty-static.service unit which starts getty@.service on tty 2 to 6 if dbus
is not installed, and hence logind cannot auto-start them on demand.

Closes: #772700

--- a/rules
+++ b/rules
@@ -236,6 +236,9 @@ endif
 	rm debian/udev/lib/udev/rules.d/71-seat.rules
 	rm debian/udev/lib/udev/rules.d/99-systemd.rules
 
+	# Debian specific units
+	sed "s!@DBUS_DAEMONDIR@!$$(pkg-config --variable=daemondir dbus-1)!" < debian/extra/getty-static.service.in > debian/systemd/lib/systemd/system/getty-static.service
+
 # use symlinked doc directories as the old udev package did
 override_dh_installdocs:
 	dh_installdocs -pudev -plibudev-dev --link-doc=libudev1
