Drop seddery for getty-static.service
Check for existance of /lib/systemd/system/dbus.service instead of dbus-daemon,
which works on Debian and Ubuntu, and is slightly more correct too.

--- a/extra/getty-static.service
+++ b/extra/getty-static.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=getty on tty2-tty6 if dbus and logind are not available
 ConditionPathExists=/dev/tty2
-ConditionFileIsExecutable=!@DBUS_DAEMONDIR@/dbus-daemon
+ConditionPathExists=!/lib/systemd/system/dbus.service
 
 [Service]
 Type=oneshot
