Install executables to / instead of /usr.
This is where Jessie installs udevd and udevadm, so keep with
that trend instead of the eudev default.

The main difference is configuring exec-prefix so that the
executables are placed in the root directory instead of the
directory specified by prefix.

--- a/rules
+++ b/rules
@@ -10,6 +10,7 @@ BOOTSTRAP_DH_FLAGS := -Ngir1.2-gudev-1.0 -Nlibgudev-1.0-0 -Nlibgudev-1.0-dev
 endif
 
 CONFFLAGS = \
+	--exec-prefix= \
 	--with-rootprefix= \
 	--with-rootlibdir=/lib/$(DEB_HOST_MULTIARCH) \
 	--with-firmware-path=/lib/firmware \
