Sync-up with upstream source updates

--- a/rules
+++ b/rules
@@ -19,6 +19,7 @@ CONFFLAGS_deb = \
 	--enable-selinux \
 	--enable-introspection \
 	--enable-gtk-doc \
+	--enable-manpages \
 	$(NULL)
 
 CONFFLAGS_udeb = \
