Sync-up with upstream source updates - Add upstream commits to changelog - Use upstream's autogen.sh on rules

--- a/rules
+++ b/rules
@@ -128,7 +128,7 @@ override_dh_makeshlibs:
 
 autoreconf:
 	gtkdocize --copy --docdir docs/
-	autoreconf -f -i
+	./autogen.sh
 
 override_dh_autoreconf:
 	dh_autoreconf debian/rules -- autoreconf
